--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -2,7 +2,7 @@ name: Build Composite Stats Badge
 
 on:
   schedule:
-    - cron: "0 1 * * *"     # daily at 01:00 UTC
+    - cron: '0 1 * * *'      # daily at 01:00 UTC
   workflow_dispatch:
 
 jobs:
@@ -13,7 +13,8 @@ jobs:
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
-        with: node-version: "18"
+        with:
+          node-version: "18"
 
       - name: Install dependencies
         run: npm install @octokit/graphql
