--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Generate badge JSON
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: node .github/scripts/generate-stats.js
+        run: node .github/scripts/generate-stats.cjs
 
       - name: Commit JSON
         uses: stefanzweifel/git-auto-commit-action@v4
