--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "generate-stats": "node .github/scripts/generate-stats.mjs"
+    "generate-stats": "node .github/scripts/generate-stats.cjs"
   },
   "dependencies": {
     "@octokit/graphql": "^5.0.0"
