--- a/.github/workflows/github-stats.yml
+++ b/.github/workflows/github-stats.yml
@@ -26,6 +26,7 @@ jobs:
         
     - name: Install dependencies
       run: |
+        cd docs
         npm init -y
         npm install @octokit/rest
         
@@ -33,7 +34,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-      run: node generate-stats.js
+      run: node src/generate-stats.js
       
     - name: Commit and push if changed
       run: |
