--- a/.github/workflows/github-stats.yml
+++ b/.github/workflows/github-stats.yml
@@ -26,13 +26,11 @@ jobs:
         
     - name: Install dependencies
       run: |
+        cd docs
         npm init -y
         npm install @octokit/rest
-        
-    - name: Generate package files in docs
-      run: |
-        cp package.json docs/
-        cp package-lock.json docs/
+        cd ..
+        ln -s docs/node_modules node_modules
         
     - name: Generate stats
       env:
